Fix overflow problem when open card

--- a/src/components/contact-card/style.styl
+++ b/src/components/contact-card/style.styl
@@ -35,6 +35,7 @@
 			will-change max-height
 			font-size 13px
 			font-family 'Roboto', 'Arial', 'Helvetica', sans-serif
+			overflow hidden
 
 			span
 				color #01A4E0
